--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=spring-boot-redis-distributed-lock
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/product
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=yu7i
+spring.datasource.password=53cret
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
