--- a/compose.yaml
+++ b/compose.yaml
@@ -1,1 +1,28 @@
 services:
+  redis:
+    image: redis:7-alpine
+    container_name: redis
+    networks:
+      - spring-network
+    ports:
+      - "6379:6379"
+
+  postgres:
+    image: postgres
+    container_name: postgres-db
+    environment:
+      POSTGRES_USER: yu7i
+      POSTGRES_PASSWORD: 53cret
+      POSTGRES_DB: product
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+    networks:
+      - spring-network
+
+volumes:
+  postgres-data:
+
+networks:
+  spring-network:
